Fix section mobile styles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,37 +49,6 @@ button:focus {
   display: none;
 }
 @media only screen and (max-width: 768px) {
-  section {
-    background: #fefefe;
-  }
-
-  .content-group {
-    -ms-flex-direction: column;
-    flex-direction: column;
-    width: 100%;
-  }
-  .content-group .column {
-    padding-left: 3rem;
-    padding-right: 3rem;
-    width: 100%;
-  }
-  .section-title .title {
-    font-size: 2.5rem;
-    line-height: 2.8rem;
-    text-align: center;
-  }
-
-  .section-description .description {
-    font-size: 0.9rem;
-    text-align: center;
-  }
-  .section-title .title .highlight i {
-    height: 105px;
-    left: -8px;
-    top: -14px;
-    padding: 0.5rem 0.5rem 0.25rem;
-  }
-
   .pl-6 {
     padding-left: 0;
   }
